compile: Use clang14b-llvm
Signed-off-by: XSans02 <xsans966@gmail.com>

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -22,4 +22,4 @@ jobs:
         TOKED: ${{ secrets.TOKED }}
       run: |
         wget https://raw.githubusercontent.com/XSans02/CI_Script/main/vayu/doBuild
-        bash doBuild stable clang14-llvm
+        bash doBuild stable clang14b-llvm
