compile: Install python2
/bin/sh: 1: python2: not found
make[2]: *** [../arch/arm64/boot/Makefile:74: arch/arm64/boot/dtbo.img] Error 127
make[1]: *** [arch/arm64/Makefile:257: dtbo.img] Error 2
make[1]: *** Waiting for unfinished jobs....

Signed-off-by: XSans0 <xsansdroid@gmail.com>

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -18,7 +18,7 @@ jobs:
         GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
         TC: ${{ secrets.TC }}
       run: |
-        sudo apt update -y && sudo apt upgrade -y
+        sudo apt update -y && sudo apt upgrade -y && sudo apt install python2 -y
         git clone --depth=1 -b $KBRANCH https://"$GIT_TOKEN":x-oauth-basic@github.com/XSans0/kernel_xiaomi_vayu kernel
         cd kernel
         wget https://raw.githubusercontent.com/XSans0/my-script/main/ci/build.sh
