--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -13,12 +13,12 @@ jobs:
     - name: Start Build
       env:
         TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-        CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
+        TELEGRAM_CHAT: ${{ secrets.TELEGRAM_CHAT }}
         KBRANCH: ${{ secrets.KBRANCH }}
         GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
         TC: ${{ secrets.TC }}
       run: |
-        sudo apt update -y && sudo apt upgrade -y && sudo apt install python2 -y
+        sudo apt update && sudo apt upgrade -y && sudo apt install python2 -y
         git clone --depth=1 -b $KBRANCH https://"$GIT_TOKEN":x-oauth-basic@github.com/XSans0/kernel_xiaomi_vayu kernel
         cd kernel
         wget https://raw.githubusercontent.com/XSans0/my-script/main/ci/build.sh
