--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -19,7 +19,5 @@ jobs:
         TC: ${{ secrets.TC }}
       run: |
         sudo apt update && sudo apt upgrade -y && sudo apt install python2 -y
-        git clone --depth=1 -b $KBRANCH https://"$GIT_TOKEN":x-oauth-basic@github.com/XSans0/kernel_xiaomi_vayu kernel
-        cd kernel
         wget https://raw.githubusercontent.com/XSans0/my-script/main/ci/build.sh
-        bash build.sh
+        bash build.sh ${KBRANCH}
