--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -16,5 +16,6 @@ task:
       - echo "en_US.UTF-8 UTF-8" | sudo tee -a /etc/locale.gen
       - echo "LANG=en_US.UTF-8" | sudo tee -a /etc/locale.conf
       - sudo locale-gen en_US.UTF-8
+      - sudo apt install wget -y
       - wget https://raw.githubusercontent.com/XSans0/my-script/main/build.sh
       - bash build.sh
